<resources>
    <string name="app_name">CheckYourReflexes!</string>
    <string name="_00_00">00:00</string>
    <string name="start">start</string>
    <string name="wyslij">Send</string>
    <string name="reset">Reset</string>
    <string name="tries">tries</string>
    <string name="score">score</string>
    <string name="check_leaderboard">Check leaderboard</string>
    <string name="textview">Please update the scoreboard.</string>
    <string name="get_back_to_game">Get back to game</string>
    <string name="update_scoreboard">update scoreboard</string>
    <string name="send_your_score">Send Your Score</string>
    <string name="your_nickname_here">Your nickname here</string>
    <string name="final_score">Final score:</string>
    <string name="your_tries">Your tries:</string>
    <string name="send_result">Send Result</string>
</resources>
